Fixed alignment of about page on mobile devices

--- a/static/css/grid.less
+++ b/static/css/grid.less
@@ -38,6 +38,7 @@ h3.gridPlusText
 .content-item-box {
   display: flex;
   align-items: center;
+  flex-wrap: wrap;
 }
 
 .content-item-box h1 {
@@ -48,6 +49,8 @@ h3.gridPlusText
 .content-item-box .box-item {
   margin: 0;
   padding: 0;
+  min-width: 300px;
+  flex: 1;
 }
 
 .content-item-box .box-item img {
